--- a/styles.css
+++ b/styles.css
@@ -95,9 +95,17 @@
     background-color: aqua;
 
 }
-
-
-
 .devpic img {
     width: 50vh;
 }
+
+/* for Responsive  */
+/* @media (max-width: 800px) {
+    *{
+        background-color: red;
+    }
+    .sidebar{
+        transform: translate(-443px, 0px);
+        position: absolute;
+    }
+  } */
