--- a/styles.css
+++ b/styles.css
@@ -115,3 +115,53 @@
         position: absolute;
     }
   } */
+
+  /* Css for footer */
+.footerContainer{
+    display: flex;
+    height: 35vh;
+    font-family: 'Fira Sans', sans-serif;
+    /* background-color: aquamarine; */
+}
+.col-1{
+    /* background-color: red; */
+    width: 33.33vw;
+    text-align: left;
+
+}
+.col-1 a{
+ display:grid;
+ padding-left: 200px;
+ text-align: left ;
+ padding-top: 18px;
+
+}
+.col-1 h3{
+    padding-top: 10px;
+    text-align: left ;
+    padding-left: 200px;
+}
+.col-2 {
+    padding-top: 10px;
+    /* background-color: green; */
+    width: 33.33vw;
+    text-align: center ;
+
+}
+.col-2 img{
+    /* display: flex; */
+    width: 20px;
+    
+}
+.col-2 h6{
+
+}
+.col-3{
+    padding-top: 10px;
+    padding-left: 180px;
+    text-align:  left;
+    /* background-color: yellow; */
+    width: 33.33vw;
+}.col-3 p{
+    padding-top: 10px;
+}
