--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
     background-color: rgb(201, 196, 196);
     /* width: 170px; */
     height: 100vh;
+    padding-top: 53px;
 
 }
 
@@ -36,10 +37,12 @@
     padding: 15px;
 
 }
+
 .sidebar nav li a {
     text-decoration: none;
     color: black;
 }
+
 .infocontainer {
     /* background-color: red; */
     height: 50vh;
@@ -82,23 +85,26 @@
 }
 
 .buttons button {
-    padding:8px 10px;
+    padding: 8px 10px;
     border-radius: 30px;
     color: white;
     background-color: black;
     font-size: 16px;
     font-weight: bold;
-    margin:0 8px;
+    margin: 0 8px;
     cursor: pointer;
 }
-.buttons button:hover{
+
+.buttons button:hover {
     background-color: aqua;
 
 }
+
 .devpic img {
     width: 50vh;
 }
-.hamberger{
+
+.hamberger {
     position: absolute;
     cursor: pointer;
     top: 10px;
@@ -116,52 +122,68 @@
     }
   } */
 
-  /* Css for footer */
-.footerContainer{
+/* Css for footer */
+.footerContainer {
     display: flex;
     height: 35vh;
     font-family: 'Fira Sans', sans-serif;
     /* background-color: aquamarine; */
 }
-.col-1{
+
+.col-1 {
     /* background-color: red; */
+
     width: 33.33vw;
     text-align: left;
 
 }
-.col-1 a{
- display:grid;
- padding-left: 200px;
- text-align: left ;
- padding-top: 18px;
+
+.col-1 a {
+    text-decoration: none;
+    display: grid;
+    padding-left: 200px;
+    text-align: left;
+    padding-top: 18px;
 
 }
-.col-1 h3{
+
+.col-1 h3 {
+
     padding-top: 10px;
-    text-align: left ;
+    text-align: left;
     padding-left: 200px;
 }
+
+
 .col-2 {
     padding-top: 10px;
     /* background-color: green; */
     width: 33.33vw;
-    text-align: center ;
+    text-align: center;
 
 }
-.col-2 img{
+
+.col-2 img {
     /* display: flex; */
     width: 20px;
-    
-}
-.col-2 h6{
 
 }
-.col-3{
+.developerPhoto img{
+    padding-top: 15px;
+    width: 70px;
+    
+}
+
+.col-2 h6 {}
+
+.col-3 {
     padding-top: 10px;
     padding-left: 180px;
-    text-align:  left;
+    text-align: left;
     /* background-color: yellow; */
     width: 33.33vw;
-}.col-3 p{
+}
+
+.col-3 p {
     padding-top: 10px;
 }
