--- a/intro.css
+++ b/intro.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&family=Source+Code+Pro:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap');
 
+.main{
+    height: 150vh;
+}
 .introContainer{
     font-family: 'Fira Sans', sans-serif;
     display: flex;
@@ -8,12 +11,12 @@
     flex-direction: column;
     font-family: 'Source Code Pro', monospace;
 }
-.introContainer h1{
-    
+.introContainer h2{
+    padding-top: 10px;
 }
-.introContainer p{
-    
+.aboutme{
+    padding-top: 400px;
 }
-.skills{
-
+.education h4{
+    padding-top: 10px;
 }
