--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@
 
 .main {
     /* background-color: yellow; */
+    height: 100vh;
     width: 90vw;
 }
 
@@ -122,8 +123,9 @@
     }
   } */
 
-/* Css for footer */
+/* =====================================Css for footer ===========================================*/
 .footerContainer {
+    
     display: flex;
     height: 35vh;
     font-family: 'Fira Sans', sans-serif;
@@ -144,6 +146,7 @@
     padding-left: 200px;
     text-align: left;
     padding-top: 18px;
+    color: blue;
 
 }
 
@@ -174,7 +177,7 @@
     
 }
 
-.col-2 h6 {}
+
 
 .col-3 {
     padding-top: 10px;
