--- a/blog.css
+++ b/blog.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&family=Source+Code+Pro:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap');
 
+@import 'styles.css';
 .blogContainer{
     font-family: 'Fira Sans', sans-serif;
 }
