courses and respective link are added but description is not added yet

--- a/intro.css
+++ b/intro.css
@@ -65,4 +65,13 @@
 .myCoursesContainer p{
     padding-top: 10px;
 }
-
+.udemy a{
+    text-decoration: none;
+    color: blueviolet;
+    font-weight: bold;
+}
+.nptel a{
+    text-decoration: none;
+    color: blueviolet;
+    font-weight: bold;
+}
