--- a/styles.css
+++ b/styles.css
@@ -1,221 +1,61 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&family=Source+Code+Pro:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap');
-
-* {
-    margin: 0px;
-    padding: 0px;
-
-}
-
-.container {
-    display: flex;
-    /* background-color: rgb(206, 250, 250); */
-    background-image: url(images/background.jpg);
-    /* height: auto; */
-    /* background-color: rgb(95, 90, 90); */
-
-}
-
-.sidebar {
-    background-color: rgb(201, 196, 196);
-    /* width: 170px; */
-    height: 100vh;
-    padding-top: 53px;
-
-}
-
-.main {
-    /* background-color: yellow; */
-    
-    height: auto;
-    width: 90vw;
-}
-
-.sidebar nav {
-    /* background-color:rgb(167, 161, 161) ; */
-    padding: 8px;
-    width: 120px;
-}
-
-.sidebar nav li {
+body {
+    font-family: sans-serif;
+    background-color: black;
+    color: aqua;
+    margin: 0;
+    padding: 0;
+  }
+  
+  nav {
+    background-color: #f0f0f0;
+    padding: 10px;
+  }
+  
+  nav ul {
     list-style: none;
-    font-size: 19px;
-    padding: 15px;
-
-}
-
-.sidebar nav li a {
+    margin: 0;
+    padding: 0;
+  }
+  
+  nav li {
+    display: inline-block;
+    margin-right: 20px;
+  }
+  
+  nav a {
     text-decoration: none;
     color: black;
-}
-
-.infocontainer {
-    /* background-color: red; */
-    height: 50vh;
-    width: 80vw;
-    margin: 90px auto;
-    display: flex;
-    justify-content: space-around;
-}
-
-.devInfo {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    font-family: 'Source Code Pro', monospace;
-    margin-top: 170px;
-}
-
-.hello {
-    font-size: 50px;
-    color: blueviolet;
-
-}
-
-.name {
-    font-size: 30px;
-    font-weight: bold;
-    font-family: 'Fira Sans', sans-serif;
-    color: blueviolet;
-
-}
-
-.about {
-    font-size: 24px;
-    color: blueviolet;
-}
-
-.aboutmore {
-    font-size: 18px;
-    padding: 8px 0px;
-    color: blueviolet;
-}
-
-.buttons {
-    margin-top: 16px;
-}
-
-.buttons button {
-    padding: 8px 10px;
-    border-radius: 30px;
-    color: white;
-    background-color: black;
-    font-size: 16px;
-    font-weight: bold;
-    margin-top: 50px;
-    margin: 0 8px;
-    cursor: pointer;
-}
-
-.buttons button:hover {
-    background-color: aqua;
-
-}
-
-.devpic img {
-    width: 50vh;
-}
-.extra{
-    padding-top: 15px;
-    
-}
-.extra p{
-    text-align: justify;
-    color: blueviolet;
-}
-.qoutes h3{
-    padding-top: 5px;
-    color: blueviolet;
-
-}
-.qoutes h4{
-    padding-top: 5px;
-    padding-left: 305px;
-    color: blueviolet;
-}
-
-.hamberger {
-    position: absolute;
-    cursor: pointer;
-    top: 10px;
-    left: 10px;
-}
-
-/* for Responsive  */
-/* @media (max-width: 800px) {
-    *{
-        background-color: red;
-    }
-    .sidebar{
-        transform: translate(-443px, 0px);
-        position: absolute;
-    }
-  } */
-
-/* =====================================Css for footer ===========================================*/
-.footerContainer {
-    
-    display: flex;
-    height: 35vh;
-    font-family: 'Fira Sans', sans-serif;
-    /* background-color: aquamarine; */
-}
-
-.col-1 {
-    /* background-color: red; */
-
-    width: 33.33vw;
-    text-align: left;
-
-}
-
-.col-1 a {
-    text-decoration: none;
-    display: grid;
-    padding-left: 200px;
-    text-align: left;
-    padding-top: 18px;
-    color: blue;
-
-}
-
-.col-1 h3 {
-
-    padding-top: 10px;
-    text-align: left;
-    padding-left: 200px;
-}
-
-
-.col-2 {
-    padding-top: 10px;
-    /* background-color: green; */
-    width: 33.33vw;
+  }
+  
+  header h1 img {
+    /* Style the image size and position within the heading */
+    width: 200px;  /* Adjust as needed */
+    height: auto;
+    vertical-align: middle;  /* Align image vertically within the text */
+  }
+  
+  header {
     text-align: center;
+    padding: 50px;
+  }
+  
+  
+  section {
+    padding: 20px;
+  }
+  
+  .work-item {
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  
+  .work-item img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+  }
+  
 
-}
-
-.col-2 img {
-    /* display: flex; */
-    width: 20px;
-
-}
-.developerPhoto img{
-    padding-top: 15px;
-    width: 70px;
-    
-}
-
-
-
-.col-3 {
-    padding-top: 10px;
-    padding-left: 180px;
-    text-align: left;
-    /* background-color: yellow; */
-    width: 33.33vw;
-}
-
-.col-3 p {
-    padding-top: 10px;
-}
+  .app_container{
+    text-align: center;
+  }
